# mcp

./: INSTALL.md  PROJECT.md  QUICK_START.md  README.md  README_CN.md  __main__.py  mcp_server.py  pyproject.toml  requirements.txt  setup.py
examples/: ai_assistant_example.py  basic_usage.py
src/: __init__.py  memory_manager.py  models.py  security.py  server.py  tools.py
src/ai_context_memory/: __init__.py  cli.py  database.py  memory_manager.py
src/memory/: cli.py  server.py  tools.py
tests/: __init__.py  test_database.py  test_end_to_end.py  test_integration.py  test_memory_manager.py  test_security.py  test_tools.py
