[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-context-memory"
version = "1.0.0"
description = "AI Context Memory MCP Server - AI上下文记忆管理服务"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "AI Context Memory Team" },
]
keywords = [
    "ai",
    "context", 
    "memory",
    "mcp",
    "assistant",
    "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiosqlite>=0.19.0",
    "cryptography>=41.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-context-memory = "ai_context_memory.cli:main"
ai-memory = "ai_context_memory.cli:main"
mcp_server = "mcp_server:main"
ai-context-memory-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/rdone4425/mcp"
Repository = "https://github.com/rdone4425/mcp.git"
Issues = "https://github.com/rdone4425/mcp/issues"
Documentation = "https://github.com/rdone4425/mcp/wiki"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_context_memory"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true